--- a/config
+++ b/config
@@ -12,7 +12,7 @@
 #
 # This configuration file has been tested on:
 #
-#	- Ubuntu 16.04 and 18.04 
+#	- Lubuntu 16.04 and 18.04 
 #	- i3 4.14.1-1
 #	- Dasung Paperlike Pro
 #
